tests/errors/var-not-declared.ja
procedure main()
    x += 1
